Update package versions

--- a/environment.yml
+++ b/environment.yml
@@ -6,15 +6,15 @@ channels:
   - conda-forge
 dependencies:
   - python=3.10
-  - pytorch
-  - transformers
-  - tqdm
-  - matplotlib
-  - bitsandbytes
-  - datasets
-  - accelerate
-  - einops
-  - wandb
-  - peft
-  - huggingface_hub
+  - pytorch=2.5.1
+  - transformers=4.52.3
+  - tqdm=4.67.1
+  - matplotlib=3.10.3
+  # - conda-forge::bitsandbytes=0.45.4
+  - datasets=3.6.0
+  - accelerate=1.7.0
+  - einops=0.8.1
+  - wandb=0.19.11
+  - peft=0.15.2
+  - huggingface_hub=0.31.4
   - pytorch-cuda=12.1
